[tool.poetry]
name = "halo_comparison"
version = "0.1.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
matplotlib = "^3.5.2"
numpy = "^1.21.3"
h5py = "^3.6.0"
vtk = {url = "https://github.com/pyvista/pyvista-wheels/raw/main/vtk-9.1.0.dev0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
pyvista = "^0.34.1"
pandas = "^1.4.2"
scipy = "^1.8.0"
pynbody = "^1.1.0"
numba = "^0.55.1"
tables = "^3.7.0"
pythran = "^0.11.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
