[tool.poetry]
name = "halo_comparison"
version = "0.1.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>"]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
matplotlib = "^3.5.2"
numpy = "^1.21.3"
h5py = "^3.6.0"
pyvista = "^0.37.0"
pandas = "^1.4.2"
scipy = "^1.8.0"
pynbody = "^1.1.0"
numba = "^0.56.1"
tables = "^3.7.0"
PyYAML = "^6.0"
siphash = "^0.0.1"
velociraptor = "^0.15.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
